Proyecto Pair Programming/force-app/main/default/objects/Options__c.object
<CustomObject>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>66255</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Correct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Correct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QuestionName__c</fullName>
        <label>QuestionName</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Options</relationshipLabel>
        <relationshipName>Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Option</label>
    <nameField>
        <label>Options Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>